--- a/trunk/modules/Hydrogen/Work/Finances/locales/de/work/finance.ini
+++ b/trunk/modules/Hydrogen/Work/Finances/locales/de/work/finance.ini
@@ -1,6 +1,29 @@
+
+[types]
+0						= "- alle -"
+1						= "manuell / statisch"
+2						= "automatisch / dynamisch"
+
+[scopes]
+0						= "- alle -"
+1						= "kurzfristig"
+2						= "mittelfristig"
+3						= "langfristig"
+
+[currencies]
+EUR						= "€"
+USD						= "$"
+
 [filter]
+legend					= "Filter"
+labelType				= "Aktualisierungstyp"
+labelScope				= "Ausrichtung"
+labelCurrency			= "Währung"
+buttonCancel			= "neu"
+buttonFilter			= "anwenden"
 
 [index]
 buttonAddBank			= "neue Bank anlegen"
 buttonAddAccount		= "neues Bankkonto anlegen"
 buttonAddFond			= "neuen Fond anlegen"
+
