--- a/trunk/modules/Hydrogen/Work/Finances/locales/de/work/finance/fund.ini
+++ b/trunk/modules/Hydrogen/Work/Finances/locales/de/work/finance/fund.ini
@@ -1,9 +1,23 @@
+
+[types]
+0						= "nicht definiert"
+1						= "ausschüttend"
+2						= "akkumulierend"
+
+[scopes]
+0						= "nicht definiert"
+1						= "kurzfristig"
+2						= "mittelfristig"
+3						= "langfristig"
+
 [currencies]
 EUR						= "€"
 USD						= "$"
 
 [add]
 legend					= "Neuer Fond"
+labelType				= "Ertragsart"
+labelScope				= "Ausrichtung"
 labelISIN				= "ISIN des Fonds"
 labelPieces				= "Stückzahl"
 labelCurrency			= "Währung"
@@ -18,11 +32,14 @@ msgNoPieces				= "Die Stückzahl fehlt. Wieviele Anteile haben Sie gekauft?"
 
 [edit]
 legend					= "Fond verändern"
+labelType				= "Ertragsart"
+labelScope				= "Ausrichtung"
 labelISIN				= "ISIN des Fonds"
 labelPieces				= "Stückzahl"
 labelCurrency			= "Währung"
 labelTitle				= "Titel des Fonds"
 labelKag				= "Kapitalgesellschaft"
+labelScope				= "Ausrichtung"
 buttonCancel			= "zur Liste"
 buttonSave				= "speichern"
 buttonRemove			= "entfernen"
