--- a/trunk/modules/Hydrogen/Admin/Module/Editor/locales/de/admin/module/editor.ini
+++ b/trunk/modules/Hydrogen/Admin/Module/Editor/locales/de/admin/module/editor.ini
@@ -191,7 +191,8 @@ cubrid					= "CUBRID"
 mysql					= "MySQL"
 mssql					= "MS SQL"
 pgsql					= "Postgres"
-sqlite					= "SQLite"
+sqlite2					= "SQLite 2"
+sqlite					= "SQLite 3"
 
 [relation-types]
 needs					= "benötigt"
