--- a/trunk/modules/Hydrogen/Admin/Module/Editor/locales/en/admin/module/editor.ini
+++ b/trunk/modules/Hydrogen/Admin/Module/Editor/locales/en/admin/module/editor.ini
@@ -116,6 +116,7 @@ resourceTemplates		= "Templates"
 resourceStyles			= "Style Sheets"
 resourceScripts			= "JavaScripts"
 resourceImages			= "Grafiken"
+resourceFiles			= "Dateien <small>(sonstige)</small>"
 
 [tab-links]
 legendAdd				= "Neuer Link"
@@ -177,6 +178,8 @@ template				= "Template"
 style					= "CSS"
 script					= "JavaScript"
 image					= "Image"
+file					= "sonstige Datei"
+
 
 [database-events]
 install					= "Installation"
@@ -208,6 +211,10 @@ url						= "URL"
 theme					= "Theme"
 primer					= "Primer"
 scripts-lib				= "Script-Lib"
+url						= "URL"
+
+[sources-file]
+local					= "lokal"
 url						= "URL"
 
 [config-types]
