--- a/trunk/modules/Hydrogen/Admin/Instances/locales/de/admin/instance.ini
+++ b/trunk/modules/Hydrogen/Admin/Instances/locales/de/admin/instance.ini
@@ -1,7 +1,10 @@
 [database-drivers]
 cubrid		= "CUBRID"
-mssql		= "MS SQL"
+dblib		= "Sybase / MS SQL"
+mssql		= "MS SQL 2005+ / Azure"
 mysql		= "MySQL"
+odbc		= "ODBC"
 pgsql		= "PostgreSQL"
 sqlite2		= "SQLite 2"
 sqlite		= "SQLite 3"
+
