--- a/trunk/modules/Hydrogen/Blog/Compact/locales/de/blog.ini
+++ b/trunk/modules/Hydrogen/Blog/Compact/locales/de/blog.ini
@@ -1,6 +1,7 @@
 [states]
-0				= "in Bearbeitung"
-1				= "öffentlich"
+-1				= "Rundablage"
+0				= "Bearbeitung"
+1				= "Veröffentlichung"
 
 [feed]
 title			= "Blog-Artikel"
