--- a/trunk/modules/Hydrogen/Blog/Compact/locales/de/blog.ini
+++ b/trunk/modules/Hydrogen/Blog/Compact/locales/de/blog.ini
@@ -6,3 +6,6 @@
 [feed]
 title			= "Blog-Artikel"
 description		= "Aktuelle Blog-Artikel von iamkriss.net"
+category		= "Blog-Artikel"
+copyright		= "CC BY-NC-SA 3.0"
+
