--- a/trunk/modules/Hydrogen/Gallery/Compact/locales/de/gallery.ini
+++ b/trunk/modules/Hydrogen/Gallery/Compact/locales/de/gallery.ini
@@ -1,4 +1,5 @@
 [feed]
 title			= "Foto-Galerien"
 description		= "Aktuelle Foto-Galerien von iamkriss.net"
-
+category		= "Foto-Galerien"
+copyright		= "CC BY-NC-SA 3.0"
