--- a/trunk/modules/Hydrogen/Admin/Modules/locales/de/admin/module.ini
+++ b/trunk/modules/Hydrogen/Admin/Modules/locales/de/admin/module.ini
@@ -51,8 +51,8 @@ labelVersionAvailable	= "Version verfügbar"
 
 labelCopy				= "kopieren"
 labelLink				= "einbinden"
-textCopy				= "Das Modul wird referenziert. Änderungen sind bedingt möglich.";
-textLink				= "Das Modul wird kopiert und damit von der Quelle entkoppelt.";
+textCopy				= "Das Modul wird referenziert. Änderungen sind bedingt möglich."
+textLink				= "Das Modul wird kopiert und damit von der Quelle entkoppelt."
 
 buttonList				= "zur List"
 buttonCancel			= "zur Ansicht"
