--- a/trunk/modules/Hydrogen/Admin/Modules/locales/de/admin/module/viewer.ini
+++ b/trunk/modules/Hydrogen/Admin/Modules/locales/de/admin/module/viewer.ini
@@ -20,8 +20,8 @@ labelVersionAvailable	= "Version verfügbar"
 
 labelCopy				= "kopieren"
 labelLink				= "einbinden"
-textCopy				= "Das Modul wird referenziert. Änderungen sind bedingt möglich.";
-textLink				= "Das Modul wird kopiert und damit von der Quelle entkoppelt.";
+textCopy				= "Das Modul wird referenziert. Änderungen sind bedingt möglich."
+textLink				= "Das Modul wird kopiert und damit von der Quelle entkoppelt."
 
 buttonCancel			= "zurück"
 buttonInstall			= "installieren"
