--- a/trunk/modules/Hydrogen/Admin/Module/Editor/locales/de/admin/module/editor.ini
+++ b/trunk/modules/Hydrogen/Admin/Module/Editor/locales/de/admin/module/editor.ini
@@ -18,8 +18,8 @@ no						= "nein"
 [install]
 labelCopy				= "kopieren"
 labelLink				= "einbinden"
-textCopy				= "Das Modul wird referenziert. Änderungen sind bedingt möglich.";
-textLink				= "Das Modul wird kopiert und damit von der Quelle entkoppelt.";
+textCopy				= "Das Modul wird referenziert. Änderungen sind bedingt möglich."
+textLink				= "Das Modul wird kopiert und damit von der Quelle entkoppelt."
 
 buttonCancel			= "zurück"
 buttonInstall			= "installieren"
