--- a/trunk/modules/Hydrogen/Admin/Modules/locales/de/admin/module/viewer.ini
+++ b/trunk/modules/Hydrogen/Admin/Modules/locales/de/admin/module/viewer.ini
@@ -39,6 +39,7 @@ buttonCancel			= "abbrechen"
 buttonInstall			= "install"
 buttonEdit				= "bearbeiten"
 buttonRemove			= "deinstallieren"
+buttonReload			= "neu laden"
 
 tabGeneral				= "Generell"
 tabResources			= "Dateien"
