--- a/trunk/modules/Hydrogen/Work/Issues/locales/de/work/issue.ini
+++ b/trunk/modules/Hydrogen/Work/Issues/locales/de/work/issue.ini
@@ -101,3 +101,7 @@ buttonExpand	= "mehr"
 buttonCollapse	= "weniger"
 
 
+[graph]
+titlePriority	= "Priorität"
+titleStatus		= "Status"
+titleType		= "Typ"
