--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -125,6 +125,7 @@ remove				= "entfernen"
 
 [mail-daily]
 subject				= "Aufgaben und Termin"
+heading				= ""
 greeting			= "Hallo %1$s, heute ist der %2$s und es gibt etwas zu erledigen."
 textNoTasks			= ""
 textNoEvents		= ""
