--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -126,7 +126,7 @@ remove				= "entfernen"
 [mail-daily]
 subject				= "Aufgaben und Termin"
 heading				= ""
-greeting			= "Hallo %1$s, heute ist %2$s%3$s und es gibt etwas zu erledigen."
+greeting			= "Hallo %1$s, heute ist %2$s und es gibt etwas zu erledigen."
 textNoTasks			= ""
 textNoEvents		= ""
 headingTasks		= "Du hast heute folgende Aufgaben:"
