--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -23,6 +23,7 @@ labelContent		= "Inhalt"
 labelLocation		= "Ort"
 labelReference		= "Referenz"
 labelWorker			= "zuweisen an"
+labelProjectId		= "Projekt"
 buttonCancel		= "zur Liste"
 buttonSave			= "speichern"
 msgSuccess			= "Die Aufgabe wurde hinzugefügt."
@@ -43,6 +44,7 @@ labelContent		= "Inhalt"
 labelLocation		= "Ort"
 labelReference		= "Referenz"
 labelWorker			= "zugewiesen an"
+labelProjectId		= "Projekt"
 buttonCancel		= "zur Liste"
 buttonSave			= "speichern"
 buttonRemove		= "entfernen"
