--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -7,6 +7,7 @@ labelDirection		= "Richtung"
 buttonAdd			= "neue Mission"
 buttonFilter		= "filtern"
 buttonReset			= "neu"
+suffixTime			= "Uhr"
 
 [add]
 legend				= "neue Aufgabe"
