--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -6,7 +6,7 @@ labelOrder			= "Sortierung"
 labelDirection		= "Richtung"
 buttonAdd			= "neue Mission"
 buttonFilter		= "filtern"
-buttonReset			= "neu"
+buttonReset			= "alle"
 suffixTime			= "Uhr"
 
 [add]
@@ -84,8 +84,8 @@ ASC					= "aufsteigend"
 DESC				= "absteigend"
 
 [list-actions]
-moveLeft			= "-1"
-moveRight			= "+1"
+moveLeft			= "1 Tag eher"
+moveRight			= "1 Tag später"
 edit				= "bearbeiten"
 remove				= "entfernen"
 
