--- a/trunk/modules/Hydrogen/Users/locales/de/admin/user.ini
+++ b/trunk/modules/Hydrogen/Users/locales/de/admin/user.ini
@@ -172,3 +172,4 @@ DESC					= "absteigend"
 
 [remove]
 msgInvalidUserId		= "Dieser Benutzer existiert nicht."
+msgSuccess			= "Der Benutzer <cite>%s</cite> wurde entfernt."
