--- a/trunk/modules/Hydrogen/Manage/Projects/locales/de/manage/project.ini
+++ b/trunk/modules/Hydrogen/Manage/Projects/locales/de/manage/project.ini
@@ -19,7 +19,7 @@ buttonAdd			= "neues Projekt"
 legend				= "Filter"
 labelStatus			= "Status"
 buttonFilter		= "filtern"
-buttonReset			= "neu"
+buttonReset			= "alle"
 
 
 [add]
