--- a/trunk/modules/Hydrogen/Manage/Projects/locales/de/manage/project.ini
+++ b/trunk/modules/Hydrogen/Manage/Projects/locales/de/manage/project.ini
@@ -40,6 +40,9 @@ msgTitleExisting	= "Ein Projekt mit dem Titel <cite>%s</cite> existiert bereits.
 [edit]
 legend				= "Projekt bearbeiten"
 
+buttonCancel		= "zurück"
+buttonSave			= "speichern"
+
 msgSuccess			= "Gespeichert."
 msgInvalidId		= "INVALID ID"
 msgTitleMissing		= "Das Projekt braucht einen Titel."
