--- a/trunk/modules/Hydrogen/Manage/My/User/Setting/locales/de/manage/my/user/setting.ini
+++ b/trunk/modules/Hydrogen/Manage/My/User/Setting/locales/de/manage/my/user/setting.ini
@@ -3,4 +3,12 @@ title				= "Benutzereinstellungen"
 
 [index]
 legend				= "Einstellungen"
+buttonResetAlt			= "Einstellung zurücksetzen?"
 buttonSave			= "speichern"
+noSettings			= "<div class="hint-empty"><em>Es sind keine Module installiert, die Einstellungen erlauben.</em></div>"
+
+[update]
+msgErrorNumberTooSmall		= "Die Zahl ist zu klein."
+msgErrorNumberTooLarge		= "Die Zahl ist zu groß."
+msgSuccess			= "Die Änderungen an den Einstellungen wurden gespeichert."
+
