--- a/trunk/modules/Hydrogen/Admin/Module/Sources/locales/de/admin/module/source.ini
+++ b/trunk/modules/Hydrogen/Admin/Module/Sources/locales/de/admin/module/source.ini
@@ -4,8 +4,8 @@
 0						= "inaktiv"
 
 [types]
-folder					= "Ordner"
-http					= "HTTP"
+folder					= "Server-Ordner"
+http					= "HTTP (lesend)"
 ;ftp						= "FTP (fehlt noch)"
 ;sea						= "SEA (fehlt noch)"
 ;hub						= "Hub (fehlt noch)"
