--- a/trunk/modules/Hydrogen/Info/Manual/locales/de/info/manual.ini
+++ b/trunk/modules/Hydrogen/Info/Manual/locales/de/info/manual.ini
@@ -35,7 +35,7 @@ msgErrorRename			= "Die Datei <b>%s</b> konnte nicht umbenannt werden."
 msgErrorFileNotFound	= "Dokument <b>%s</b> nicht gefunden. Weiterleitung zur Übersicht."
 
 [view]
-buttonEdit				= "anzeigen"
+buttonEdit				= "verändern"
 
 [move]
 msgErrorFileNotFound	= "Die Datei <b>%s</b> existiert nicht."
