--- a/trunk/modules/Hydrogen/Manage/My/User/locales/de/manage/my/user.ini
+++ b/trunk/modules/Hydrogen/Manage/My/User/locales/de/manage/my/user.ini
@@ -58,6 +58,8 @@ msgSuccess				= "Die Änderungen wurden gespeichert."
 msgNoUsername			= "Der <label for="input_username">Benutzername</label> fehlt."
 msgNoPassword			= "Das <label for="input_password">Passwort</label> fehlt."
 msgNoEmail				= "Die <label for="input_email">E-Mail-Adresse</label> fehlt."
+msgNoFirstname			= "Der <label for="input_firstname">Vorname</label> fehlt."
+msgNoSurname			= "Der <label for="input_surname">Nachname</label> fehlt."
 msgNoPostcode			= "Die <label for="input_postcode">Postleitzahl</label> fehlt."
 msgNoCity				= "Die <label for="input_city">Stadt</label> fehlt."
 msgNoStreet				= "Die Angabe der <label for="input_street">Strasse</label> ist notwendig."
@@ -76,3 +78,5 @@ msgNoPasswordOld		= "Das <label for="input_passwordOld">aktuelle Passwort</label
 msgNoPasswordNew		= "Das <label for="input_passwordNew">neue Passwort</label> fehlt."
 msgPasswordMismatch		= "Das ist nicht das <label for="input_passwordOld">aktuelle Passwort</label>."
 msgPasswordInvalid		= "Das <label for="input_passwordNew">neue Passwort</label> ist ungültig."
+msgPasswordTooShort		= "Das <label for="input_passwordNew">neue Passwort</label> ist zu kurz."
+msgPasswordTooWeak		= "Das <label for="input_passwordNew">neue Passwort</label> ist zu schwach."
