--- a/trunk/modules/Hydrogen/Manage/Users/locales/de/manage/role.ini
+++ b/trunk/modules/Hydrogen/Manage/Users/locales/de/manage/role.ini
@@ -46,6 +46,8 @@ labelDescription		= "Beschreibung"
 buttonCancel			= "abbrechen"
 buttonSave			= "speichern"
 buttonRemove			= "entfernen"
+buttonAddUser		= "neuer Benutzer mit dieser Rolle"
+buttonFilter		= "Benutzer dieser Gruppe anzeigen"
 
 msgSuccess			= "Die Änderungen an Rolle <em>%s</em> wurden gespeichert."
 msgNotice0			= "Die Rolle <em>%s</em> wurde nicht verändert."
