--- a/trunk/modules/Hydrogen/Manage/Users/locales/de/manage/user.ini
+++ b/trunk/modules/Hydrogen/Manage/Users/locales/de/manage/user.ini
@@ -86,6 +86,7 @@ buttonCancel			= "abbrechen"
 buttonSave				= "speichern"
 buttonRemove			= "entfernen"
 buttonRemoveConfirm		= "Wirklich?"
+buttonRole				= "Rolle des Benutzers"
 
 msgSuccess				= "Die Änderungen am Benutzer <em>%s</em> wurden gespeichert."
 msgNoticeNoChange		= "Es wurde nichts am Benutzer <em>%s</em> geändert."
@@ -141,6 +142,7 @@ buttonAdd				= "neuer Benutzer"
 
 [indexListHeads]
 name					= "Name"
+role					= "Rolle"
 status					= "Kontostatus"
 registeredAt			= "registriert vor"
 loggedAt				= "eingeloggt vor"
