--- a/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
+++ b/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
@@ -1,19 +1,25 @@
 [index]
-
+heading			= "Forum"
+headTitle		= "Thema"
+headFacts		= "Fakten"
 
 [types]
-0			= "normal"
-1			= "hervorgehoben"
+0				= "normal"
+1				= "hervorgehoben"
 
+[thread]
+heading			= ""
+buttonApprove	= "bestätigen"
+buttonRemove	= "entfernen"
 
 [states-thread]
--2			= "entfernt"
--1			= "versteckt"
-0			= "neu"
-1			= "bestätigt"
-2			= "geschlossen"
+-2				= "entfernt"
+-1				= "versteckt"
+0				= "neu"
+1				= "bestätigt"
+2				= "geschlossen"
 
 [states-post]
--1			= "entfernt"
-0			= "neu"
-1			= "bestätigt"
+-1				= "entfernt"
+0				= "neu"
+1				= "bestätigt"
