--- a/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
+++ b/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
@@ -1,16 +1,37 @@
 [index]
-heading			= "Forum"
-headTitle		= "Thema"
+heading			= "Kategorien"
+headTitle		= "Kategorien"
 headFacts		= "Fakten"
+buttonUp		= "hoch"
+buttonDown		= "runter"
+buttonRename	= "umbenennen"
+buttonRemove	= "entfernen"
+
+[topic]
+heading			= "Kategorie"
+headTitle		= "Themen"
+headActions		= ""
+buttonRename	= "umbenennen"
+buttonRemove	= "entfernen"
+
+
+[topic-add]
+heading			= "Neues Thema"
+labelTitle		= "Titel"
+labelContent	= "Beitrag"
+labelTopicId	= "in Kategorie"
+labelType		= "Typ"
+buttonSave		= "speichern"
 
 [types]
 0				= "normal"
 1				= "hervorgehoben"
 
 [thread]
-heading			= ""
+heading			= "Thema"
 buttonApprove	= "bestätigen"
 buttonRemove	= "entfernen"
+buttonEdit		= "bearbeiten"
 
 [states-thread]
 -2				= "entfernt"
