--- a/trunk/modules/Hydrogen/Admin/Module/Installer/locales/de/admin/module/installer.ini
+++ b/trunk/modules/Hydrogen/Admin/Module/Installer/locales/de/admin/module/installer.ini
@@ -36,7 +36,7 @@ file					= "Datei"
 
 [update-file-state-description]
 0						= "Die Moduldatei ist neu und existiert in der lokalen Installation noch nicht."
-1						= "Die Moduldatei hat gegenüber der lokalen Kopie eine Änderungen."
+1						= "Die Moduldatei hat gegenüber der lokalen Kopie keine Änderungen."
 2						= "Die Moduldatei ist neuer oder die lokale Datei hat Änderungen."
 3						= "Die lokale Datei ist eingebunden und automatisch aktuell."
 4						= "Die lokale Datei ist an ein anderes Modul gebunden."
