--- a/trunk/modules/Hydrogen/Info/Files/locales/de/info/file.ini
+++ b/trunk/modules/Hydrogen/Info/Files/locales/de/info/file.ini
@@ -1,27 +1,33 @@
 [index]
 heading				= "Dateien"
-headFile			= "Datei"
+headFile			= "Ordner & Dateien"
 headSize			= "Größe"
 headTimestamp		= "hochgeladen"
 headDownloads		= "runtergeladen"
-headActions			= ""
+headActions			= "Aktionen"
+buttonOpenFolder	= "Ordner öffnen"
 buttonDownload		= "herunterladen"
 buttonRemove		= "entfernen"
 prefixTimePhrase	= "vor "
 suffixDownloads		= " mal"
 timePhrase			= "vor %s hochgeladen"
+empty				= "In diesem Ordner sind weder Dateien noch Unterordner."
+
+[info]
+filesInFolders		= "<b>%d</b> Dateie(n) in <b>%d</b> Ordner(n)"
+downloads			= "<b>%d</b> Downloads"
+lastUpload			= "letzter Upload vor <b>%s</b>"
+lastDownload		= "letzter Download vor <b>%s</b>"
 
 [upload]
 heading				= "Datei hochladen"
 labelFile			= "lokale Datei"
-labelIn				= "in Ordner"
 buttonSave			= "speichern"
 
 
 [addFolder]
 heading				= "Neuer Ordner"
-labelFolder			= "Fordnername"
-labelIn				= "in Ordner"
+labelFolder			= "Ordnername"
 buttonSave			= "hinzufügen"
 
 [folders]
